# oak

./: .travis.yml  README.md
oak-core/: oak-core.cabal  oak-core.lock-8.2.2
oak-core/src/Irreverent/Oak/: Core.hs
oak-optparse/: oak-optparse.cabal  oak-optparse.lock-8.2.2
oak-optparse/src/Irreverent/Oak/: Options.hs
template-files/: README.md.template
